--- a/view/crearPartida_view.mustache
+++ b/view/crearPartida_view.mustache
@@ -1,7 +1,7 @@
 {{> header}}
 <div class="flex flex-col justify-center items-center w-full h-screen">
     <h1 class="font-bold text-5xl text-center text-indigo-700">Pregunta 1</h1>
-    <div class="bg-white p-12 rounded-lg shadow-lg w-[500px] mt-8">
+    <div class="bg-white p-12 rounded-lg shadow-lg w-[90%] sm:w-[500px] mt-8">
         <p class="text-xl text-indigo-600 my-2">0 puntos</p>
         <p class="text-2xl font-bold my-2">¿Cuándo se creó Facebook?</p>
         <label for="a"
