--- a/view/crearPregunta_view.mustache
+++ b/view/crearPregunta_view.mustache
@@ -1,7 +1,7 @@
 {{> header}}
 <div class="flex flex-col justify-center items-center w-full h-screen">
     <h1 class="font-bold text-5xl text-center text-indigo-700">Crear pregunta</h1>
-    <div class="bg-white p-12 rounded-lg shadow-lg w-[500px] mt-8">
+    <div class="bg-white p-12 rounded-lg shadow-lg w-[90%] sm:w-[500px] mt-8">
         <input id="pregunta" type="text" placeholder="Insertar pregunta"
                class="w-full mt-4 py-2 text-xl focus:outline-none border-b border-gray-300">
         <input id="a" type="text" placeholder="Opción A"
