--- a/view/crearPregunta_view.mustache
+++ b/view/crearPregunta_view.mustache
@@ -5,15 +5,22 @@
         background-size: cover;
         background-position: center;
     }
+
 </style><div class="flex flex-col justify-center items-center w-full my-8 2xl:my-0 2xl:h-screen">
+
+</style>
+<div class="flex flex-col justify-center items-center w-full my-8 2xl:my-0 2xl:h-screen">
+
     <h1 class="font-bold text-5xl text-center text-indigo-100">Crear pregunta</h1>
     <div class="bg-white p-12 rounded-lg shadow-lg w-[90%] sm:w-[500px] mt-8">
         <form action="crearPregunta" method="post">
             <input id="pregunta" name="pregunta" type="text" placeholder="Insertar pregunta" value="{{datos.pregunta}}"
                    class="w-full mt-4 py-2 text-xl focus:outline-none border-b border-gray-300"/>
             <span class="text-sm bg-red-200 text-red-800">{{errores.errorPregunta}}</span>
-
             <input id="opcionA" name="opcionA" type="text" placeholder="Opción A (Opcion Correcta)" value="{{datos.opcionA}}"
+
+            <input id="opcionA" name="opcionA" type="text" placeholder="Opción A (Opcion Correcta)"
+                   value="{{datos.opcionA}}"
                    class="w-full mt-4 border border-gray-300 rounded-lg py-2 px-6 text-lg duration-100 focus:outline-gray-400"/>
             <span class="text-sm bg-red-200 text-red-800">{{errores.errorOpcionA}}</span>
 
